# fling

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
packaging/: install-bundle.sh  install-cli-from-source.sh  install-ui.sh  package-release.sh  uninstall-ui.sh
src/: archive.rs  commands.rs  config.rs  error.rs  fs_safe.rs  game_profiles.rs  install.rs  json_api.rs  lib.rs  main.rs  process.rs  runtime.rs  steam.rs  watcher.rs
systemd/: fling-watch.service
tests/: archive_policy.rs  config_home.rs  game_dir_safety.rs  game_profiles.rs  json_status.rs  process_ready.rs  run.sh  test_cli.py  test_packaging.py  test_release_installers.py  test_ui_review_regressions.py  trainer_discovery.rs  watcher_state.rs
ui/: FlingUi.csproj  FlingUi.sln  export_presets.cfg  project.godot
ui/assets/: fling_theme.tres
ui/models/: ApiModels.cs  GameCardPresentation.cs  GameGuidance.cs
ui/scenes/: ConfirmDialog.tscn  ErrorDialog.tscn  GameCard.tscn  GameDetails.tscn  Main.tscn  SettingsPage.tscn
ui/scripts/: AppLogger.cs  ArtworkService.cs  FlingClient.cs  LocalArtworkLocator.cs  Main.cs
ui/tests/: FlingUi.Tests.csproj  Program.cs
