[package]
name = "fling-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "fling-rs"
path = "src/main.rs"

[dependencies]
libc = "0.2.183"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tempfile = "3.27.0"

[dev-dependencies]
